--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,6 +11,14 @@
 			"program": "${workspaceFolder}/main.py",
 			"console": "integratedTerminal",
 			"justMyCode": true
+		},
+		{
+			"name": "Python: Solver",
+			"type": "python",
+			"request": "launch",
+			"program": "${workspaceFolder}/solver.py",
+			"console": "integratedTerminal",
+			"justMyCode": true
 		}
 	]
 }
